--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
 tokio = { version = "1", features = ["full"] }
 clap = { version = "3.1.8", features = ["derive", "env"] }
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
-recoord = { version = "0.2", features = ["all", "format_dd"] }
+recoord = { version = "0.2", features = ["all", "format_dd", "rustls-tls"], default-features = false }
 prometheus = "0.13.0"
 axum = "0.5.0"
